notification and about alignment fix

--- a/src/app/aboutus/aboutus.component.css
+++ b/src/app/aboutus/aboutus.component.css
@@ -2,14 +2,13 @@
     height: 5rem;
     font-size: .85rem;
     background-color: #00B4D8;
-    color: white;
     border: 1px solid #00B4D8;
     transition: all 0.5s;
 }
 
 .card:hover{
     color: black;
-    font-size: .9rem;
+    /* font-size: .9rem; */
     background-color: #90E0EF;
 }
 .card-text {
